# Battleship_Bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/battleship/: boat.rs  boatmap.rs  constants.rs  game.rs  hitmap.rs  mod.rs  player.rs  position.rs  shot.rs
src/battleship/player/: destroy.rs  mod.rs  utils.rs
src/battleship/player/players/: grid.rs  mod.rs  place.rs  random.rs  shoot.rs
src/battleship/players/: destroy.rs  mod.rs  random.rs  utils.rs
src/player/: destroy.rs  mod.rs  utils.rs
src/player/players/: mod.rs  place.rs  shoot.rs
