[package]
name = "battleship_bot"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "The game of battleship and a few bot implementations"
readme = "README.md"
repository = "https://github.com/ProfessorQu/Battleship_Bot"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
